session-3-hw-count/igw.tf
resource "aws_internet_gateway" "igw" {
vpc_id = aws_vpc.main.id
tags = { 
    Name = "Internet Gateway for VPC"
}
}
