session-3-hw-count/vpc.tf
resource "aws_vpc" "main" {
 cidr_block = var.vpc_cidr_block
 
 tags = {
   Name = "session3VPC"
 }
}
